wk_taa_taaqa/src/objects/Snapshot_Forecast_Trend__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <label>As of Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Technology__c</fullName>
        <label>ERP Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Probability</fullName>
                </value>
                <value>
                    <fullName>Medium Probability</fullName>
                </value>
                <value>
                    <fullName>Low Probability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Type__c</fullName>
        <label>Forecast Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>High (&gt;90%)</fullName>
                </value>
                <value>
                    <fullName>Medium (50-90%)</fullName>
                </value>
                <value>
                    <fullName>Low (&lt;50%)</fullName>
                </value>
                <value>
                    <fullName>Omitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_Level_Division__c</fullName>
        <label>High Level Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age__c</fullName>
        <label>Opportunity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_By_DTN__c</fullName>
        <label>Opportunity Created By DTN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_DTN__c</fullName>
        <label>Opportunity Owner DTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <label>Product Sub-Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_Forecast__c</fullName>
        <description>Revised Forecast</description>
        <label>Revised Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAR_Account__c</fullName>
        <label>VAR Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Snapshot: Forecast Trend</label>
    <nameField>
        <label>Snapshot: Forecast Trend Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot: Forecast Trends</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>